<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dist_M"
    tools:context=".activities.MainActivity">

    <GridView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tx_turn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dist_M"
        android:id="@+id/grid_board"
        android:horizontalSpacing="@dimen/dist_S"
        android:verticalSpacing="@dimen/dist_S"
        tools:numColumns="@integer/board_size" />

    <TextView
        app:layout_constraintEnd_toStartOf="@id/tv_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_restart_multiplayer"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/tx_turn"
        android:layout_marginBottom="@dimen/dist_M"
        android:gravity="end"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textSize="24sp"
        android:text="@string/turn_of"/>

    <TextView
        app:layout_constraintStart_toEndOf="@id/tx_turn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tx_turn"
        app:layout_constraintBottom_toBottomOf="@id/tx_turn"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/tv_player"
        android:layout_marginStart="@dimen/dist_M"
        android:gravity="start"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textSize="24sp"
        tools:text="Player"/>

    <Button
        android:id="@+id/btn_restart_multiplayer"
        app:layout_constraintStart_toStartOf="@id/btn_restart_computer"
        app:layout_constraintEnd_toEndOf="@id/btn_restart_computer"
        app:layout_constraintBottom_toTopOf="@id/btn_restart_computer"
        android:layout_marginBottom="@dimen/dist_M"
        android:textSize="18sp"
        android:paddingHorizontal="@dimen/dist_XXL"
        android:text="@string/restart_multiplayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_restart_computer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_scores"
        android:layout_marginBottom="@dimen/dist_XL"
        android:textSize="18sp"
        android:paddingHorizontal="@dimen/dist_XXL"
        android:text="@string/restart_against_computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_scores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/score"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/dist_S"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_player2"
        app:layout_constraintTop_toTopOf="@id/tv_player1"
        app:layout_constraintBottom_toBottomOf="@id/tv_player1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_score2"
        android:layout_marginEnd="@dimen/dist_S"
        android:text="@string/player_2"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_score2"
        app:layout_constraintTop_toTopOf="@id/tv_player2"
        app:layout_constraintBottom_toBottomOf="@id/tv_player2"
        android:layout_marginEnd="@dimen/dist_M"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="0"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_player1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/dist_M"
        android:layout_marginBottom="@dimen/dist_S"
        android:text="@string/player_1"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_score1"
        app:layout_constraintTop_toTopOf="@id/tv_player1"
        app:layout_constraintBottom_toBottomOf="@id/tv_player1"
        app:layout_constraintStart_toEndOf="@id/tv_player1"
        android:layout_marginStart="@dimen/dist_S"
        android:text="0"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>